--- a/public/global.css
+++ b/public/global.css
@@ -5,7 +5,8 @@ html, body {
 }
 
 body {
-  color: #333;
+  color: #DDDDDD;
+  background-color: #363636;
   margin: 0;
   padding: 0;
   font-size: 1em;
@@ -14,21 +15,19 @@ body {
 }
 
 .box {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  padding: 4em;
-  margin: 2em;
-  position: relative;
-  text-align: center;
-  width:auto;
-  min-width:10em;
-  max-width:60em;
-  width: 80%;
-  margin:0 auto
+  padding-left: 1em;
+  padding-right: 1em;
 }
 
 table {
   border-collapse: collapse;
+}
+td {
+  padding-left: 1em;
+  padding-right: 1em;
+  max-width: 100%;
+  white-space: nowrap;
+  text-align: right;
 }
 
 .left {
@@ -42,7 +41,7 @@ table {
 }
 
 .upper-line {
-  border-top: 1pt solid #333;
+  border-top: 1pt solid #EEEEEE;
 }
 
 .bold {
@@ -56,4 +55,8 @@ table {
 .div-fill {
     height: 100%;
     width: 100%;
+}
+
+.no-pad {
+  padding: 0px;
 }
