--- a/public/global.css
+++ b/public/global.css
@@ -1,10 +1,5 @@
-html, body {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-
 body {
+  overscroll-behavior: contain;
   color: #DDDDDD;
   background-color: #202020;
   margin: 0;
@@ -63,4 +58,8 @@ td {
 
 .no-pad {
   padding: 0px;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
